# cookiecutter-python-package-demo

./: .cookiecutter.json  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md
.github/workflows/: publish.yml  test.yml
docs/: api.md  changelog.md  conf.py  usage.md
src/cookiecutter_python_package_demo/: __init__.py
tests/: __init__.py  test_cookiecutter_python_package_demo.py
