[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cookiecutter-python-package-demo"
authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = "~=3.8"
dependencies = []
dynamic = ["version", "description"]

[project.optional-dependencies]
tests = [
    "pytest"
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxext-opengraph",
]
dev = [
    "cookiecutter-python-package-demo[tests,docs]",
    "black",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
Documentation = "https://cookiecutter-python-package-demo.readthedocs.io/en/stable/"
Changelog = "https://cookiecutter-python-package-demo.readthedocs.io/en/stable/changelog.html"
"Source Code" = "https://github.com/sgraaf/cookiecutter-python-package-demo"
"Issue Tracker" = "https://github.com/sgraaf/cookiecutter-python-package-demo/issues"

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",  # line too long, handled by black
    "COM",  # flake8-commas, handled by black
    "CPY",  # flake8-copyright
    "INP",  # flake8-no-pep420
]
src = ["src", "tests", "docs"]
target-version = "py38"  # the minimum Python version supported, used by pyupgrade

[tool.ruff.per-file-ignores]
"__init__.py" = [
    "F401",  # unused import
]
"tests/**/test_*.py" = [
    "D",  # pydocstyle
    "ANN201",  # missing-return-type-undocumented-public-function
    "S101",   # assert
    "SIM300",   # yoda-conditions
    "PLR2004",   # magic-value-comparison
]
"docs/conf.py" = [
    "A001",  # builtin-variable-shadowing
]
"noxfile.py" = [
    "D100",  # undocumented-public-module
    "ERA001",  # commented-out-code
]

[tool.ruff.isort]
known-first-party = [
  "cookiecutter-python-package-demo",
  "tests",
]
lines-between-types = 0

[tool.ruff.pydocstyle]
convention = "google"
