[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-python-package-demo"
description = "Demo of https://github.com/sgraaf/cookiecutter-python-package."
authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = "~=3.9"
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinxext-opengraph",
]
dev = [
    "cookiecutter-python-package-demo[tests,docs]",
]

[project.urls]
Documentation = "https://cookiecutter-python-package-demo.readthedocs.io/en/stable/"
Changelog = "https://cookiecutter-python-package-demo.readthedocs.io/en/stable/changelog.html"
"Source Code" = "https://github.com/sgraaf/cookiecutter-python-package-demo"
"Issue Tracker" = "https://github.com/sgraaf/cookiecutter-python-package-demo/issues"

[tool.setuptools.dynamic]
version = {attr = "cookiecutter_python_package_demo.__version__"}

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "E501",  # line too long (pycodestyle), handled by ruff-format
    "ANN003",  # missing-type-kwargs (flake8-annotations)
    "ANN401",  # any-type (flake8-annotations)
    "COM",  # flake8-commas, handled by ruff-format
    "CPY",  # flake8-copyright
    "ISC001",  # single-line-implicit-string-concatenation (flake8-implicit-str-concat)
    "INP",  # flake8-no-pep420
]
src = ["src", "tests", "docs"]
target-version = "py39"  # the minimum Python version supported, used by pyupgrade

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",  # unused-import (Pyflakes)
]
"tests/**/test_*.py" = [
    "D",  # pydocstyle
    "ANN201",  # missing-return-type-undocumented-public-function (flake8-annotations)
    "S101",   # assert (flake8-bandit)
    "SIM300",   # yoda-conditions (flake8-simplify)
    "PLR2004",   # magic-value-comparison (Pylint)
]
"docs/conf.py" = [
    "A001",  # builtin-variable-shadowing (flake8-builtins)
]
"noxfile.py" = [
    "D100",  # undocumented-public-module (pydocstyle)
    "ERA001",  # commented-out-code (eradicate)
]

[tool.ruff.lint.isort]
known-first-party = [
  "cookiecutter-python-package-demo",
  "tests",
]
lines-between-types = 0

[tool.ruff.lint.pydocstyle]
convention = "google"
